--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
   "name": "pingocho-dark",
-  "displayName": "Pingocho dark",
-  "description": "Simple dark theme",
-  "version": "0.0.1",
+  "displayName": "Pingocho Dark",
+  "description": "A modern and eye-friendly dark theme for Visual Studio Code.",
+  "version": "1.0.0",
+  "publisher": "pingocho",
   "engines": {
-    "vscode": "^1.96.0"
+    "vscode": "^1.70.0"
   },
   "categories": [
     "Themes"
   ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "pingocho",
-        "uiTheme": "vs-dark",
-        "path": "./themes/pingocho-color-theme.json"
-      }
-    ]
-  }
-}
-
-
-{
-  "name": "pingocho-dark",
-  "displayName": "Pingocho Dark",
-  "description": "A modern and eye-friendly dark theme for Visual Studio Code.",
-  "version": "1.0.0",
-  "publisher": "Leo Marello",
-  "engines": {
-    "vscode": "^1.70.0"
-  },
-  "categories": ["Themes"],
   "contributes": {
     "themes": [
       {
@@ -51,5 +30,6 @@
     "syntax highlighting",
     "minimal"
   ],
+  "icon": "./themes/icon.png",
   "license": "MIT"
 }
